--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@vitalets/google-translate-api": "^8.0.0",
     "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
+    "events": "^3.3.0",
     "express": "^4.18.1",
+    "mongoose": "^6.4.0",
     "nodemon": "^2.0.18",
     "tunnel": "^0.0.6"
   }
